# MK-Docs-Obsidian-

./: .gitignore  README.md  README2  index.md  mkdocs.yml  requirements.txt
automation/website-deployment/mkdocs-pipeline/: README.md  build.py  pyproject.toml  setup.cfg
automation/website-deployment/mkdocs-pipeline/assets/javascripts/: audio-controls.js  mathjax.js  terminal-effects.js
automation/website-deployment/mkdocs-pipeline/assets/stylesheets/: audio-player.css  custom.css  terminal-overrides.css
automation/website-deployment/mkdocs-pipeline/mkdocs_pipeline/: tags.py
automation/website-deployment/mkdocs-pipeline/templates/macros/: main.py
automation/website-deployment/mkdocs-pipeline/theme/lantana-terminal/: mkdocs_theme.yml
docs/: --What-movies-are-positive-one-more-time-real-fast.md  01 - GM+QD.md  11 UNIVERSAL LAWS.md  4-Research-Program-Four-Phase-Investigation-Target.md  A Personal Statement for the John Templeton Foundation.md  AI Debates.md  Acknowledgment-Your-Revolutionary-Work-and-the-Jou.md  Advanced Foundational Principles.md  Atomic Age.md  B4 1 Notes 01.md  Bible Code.md  Bible study.md  Blood The Quantum Information of Life & Covenantal Exchange.md  CLAUDE-WORK-LOG.md  CURRICULUM VITAE.md  Chapter-0-Alpha-Prime-vs-Omega-Null-in-a-Constrain.md  Claude account of the Night.md  Complete Mathematical Architecture.md  Concise-Insight-Absolutely-I-still-love-this-ide.md  DM01.md  DM03.md  DM04.md  DM05.md  Evidence-for-Synchronized-Acceleration-in-Biblical.md  Faiththruphysics.md  Here we go here we go.md  Law-1-—-Gravity-Curvature.md  (+70 more)
(+1888 files in other folders)
